--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body{
   font-size:14px;
 }
 h1{
-  color: #f6a2a2;
+  color: #blue;
   font-family: Georgia, sans-serif;
   font-size:34px;
   font-weight: bold;
@@ -32,9 +32,9 @@ p{
 a{
   color: #e4d51e;
 }
-h2{color: #f6a2a2;
+h2{color: #yellow;
   font-family: Georgia, sans-serif;
-  font-size:34px;
+  font-size:25px;
   font-weight: bold;
   text-align: center;
   letter-spacing: 3px;
